--- a/students/reginald-carter.html
+++ b/students/reginald-carter.html
@@ -14,19 +14,18 @@
           <img class="learn-logo" src="https://s3.amazonaws.com/learn-verified/logo.png"/>
         </a>
       </header>
-      <div class="profile-banner" id="joe-burgess-cover"></div>
+      <div class="profile-banner" id="reginald-carter-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="joe-burgess-card"></div>
+        <div class="profile-photo" id="reginald-carter-card"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="https://www.linkedin.com/in/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="https://github.com/jmburges"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
-          <a href="http://joemburgess.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
+          <a href="www.linkedin.com/in/reginaldcarterii"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://github.com/JustReggie2"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="http://justreggieii.com/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Joe Burgess</h1>
-          <h2 class="profile-location">New York, NY</h2>
-          <div class="profile-quote">"Reduce to a previously solved problem"</div>
+          <h1 class="profile-name">Reginald Carter II</h1>
+          <h2 class="profile-location">Philadelphia, PA</h2>
+          <div class="profile-quote">"Bring solutions, not problems."</div>
         </div>
       </div>
       <div class="details-container">
@@ -36,7 +35,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>West Philadelphia born and raised! I also lived and went to college in VA. Go Rams! Currently, I manage the Philadelphia market for a top Brand Marketing Agency.</p>
             </div>
           </div>
         </div>
@@ -46,8 +45,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>Virginia Commonwealth University</h4>
+              <h5>Pre-medicine Biology Major - No Degree</h5>
             </div>
           </div>
         </div>
