automatically backed up by learn

--- a/students/reginald-carter.html
+++ b/students/reginald-carter.html
@@ -46,7 +46,11 @@
             </div>
             <div class="description-holder">
               <h4>Virginia Commonwealth University</h4>
-              <h5>Pre-medicine Biology Major - No Degree</h5>
+              <h5>Pre-medicine Biology Major</h5>
+            </div>
+            <div class="description-holder">
+              <h4>Virginia Commonwealth University</h4>
+              <h5>Pre-medicine Biology Major</h5>
             </div>
           </div>
         </div>
