automatically backed up by learn

--- a/students/reginald-carter.html
+++ b/students/reginald-carter.html
@@ -46,11 +46,11 @@
             </div>
             <div class="description-holder">
               <h4>Virginia Commonwealth University</h4>
-              <h5>Pre-medicine Biology Major</h5>
+              <h5>Pre-medicine Biology</h5>
             </div>
             <div class="description-holder">
-              <h4>Virginia Commonwealth University</h4>
-              <h5>Pre-medicine Biology Major</h5>
+              <h4>The Flatiron School</h4>
+              <h5>Full Stack Web Development</h5>
             </div>
           </div>
         </div>
