--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
               </div>
             </a>
           </div>
-
+          <div class="roster-cards-container">
+            <div class="student-card" id="reginald-carter-card">
+              <a href="students/reginald-carter.html">
+                <div class="view-profile-div">
+                  <h3 class="view-profile-text">View Profile</h3>
+                </div>
+                <div class="card-text-container">
+                  <h4 class="student-name">Reginald Carter II</h4>
+                  <p class="student-location">Philadelphia, PA</p>
+                </div>
+              </a>
+            </div>
         </div>
       </div>
       <footer class="footer">
